[package]
name = "backend"
version = "0.1.0"
edition = "2023"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.6.4"
dotenv = "0.15.0"
once_cell = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
