[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.6.4"
dotenv = "0.15.0"
once_cell = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.6.3", features = [ "runtime-actix-native-tls", "postgres" ] }
sqlx-core = "0.6.3"
native-tls = "0.2"
serde_json = "1.0.96"
